--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>
-      My name is MD Ayub Nabi
+      My name is MD Ayub Nabi.
     </h1>
     <p>
       My hobby is teaching soccer also working on building robots. 
